--- a/assets/scss/_responsive.scss
+++ b/assets/scss/_responsive.scss
@@ -18,7 +18,7 @@
     }
   }
   .what-is-maraphone {
-    margin-top: -150px;
+    margin-top: -190px;
   }
 }
 // Ipad
@@ -27,13 +27,12 @@
     font-size: 17px;
   }
   .hero {
-    padding-top: 70px;
     .main-container {
       flex-direction: column-reverse;
       align-items: center;
     }
     .content {
-      padding-top: 20px;
+      padding-bottom: 40px;
       text-align: center;
       h1 {
         font-size: 36px;
@@ -44,7 +43,7 @@
       }
     }
     .phone-img {
-      width: 240px;
+      width: 280px;
     }
   }
   .what-is-maraphone {
@@ -102,7 +101,7 @@
     }
   }
   .what-is-maraphone {
-    margin-top: -110px;
+    margin-top: -170px;
   }
   .features {
     .feature {
