--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,17 +167,14 @@ header .lang-switcher {
   border-radius: 25px;
   font-size: 16px;
   color: #fff;
-  margin-right: 24px;
 }
 
 .hero {
   padding: 130px 0 100px;
-  background-size: cover;
-  background-position: 100%;
-  background-repeat: no-repeat;
+  background-color: #4f008c;
 }
 .hero .content {
-  padding-top: 120px;
+  padding: 40px;
   color: #fff;
 }
 .hero .content h1 {
@@ -194,26 +191,16 @@ header .lang-switcher {
 .hero .phone-img {
   filter: drop-shadow(17px 15px 11px rgba(0, 0, 0, 0.18));
   height: 100%;
-  animation: movePhoneImg 3.6s ease-out infinite;
 }
 
-@keyframes movePhoneImg {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(20px);
-  }
-  100% {
-    transform: translateY(0);
-  }
-}
 .what-is-maraphone {
   padding: 60px;
   background-color: #ffffff;
   box-shadow: 0px 14px 26px rgba(0, 0, 0, 0.08);
-  margin-top: -110px;
+  margin-top: -162px;
   border-radius: 20px;
+  position: relative;
+  z-index: 2;
 }
 .what-is-maraphone h2 {
   font-size: 36px;
@@ -387,7 +374,7 @@ body.en .features .feature .content .title {
   }
 
   .what-is-maraphone {
-    margin-top: -150px;
+    margin-top: -190px;
   }
 }
 @media screen and (max-width: 800px) {
@@ -395,15 +382,12 @@ body.en .features .feature .content .title {
     font-size: 17px;
   }
 
-  .hero {
-    padding-top: 70px;
-  }
   .hero .main-container {
     flex-direction: column-reverse;
     align-items: center;
   }
   .hero .content {
-    padding-top: 20px;
+    padding-bottom: 40px;
     text-align: center;
   }
   .hero .content h1 {
@@ -414,7 +398,7 @@ body.en .features .feature .content .title {
     margin: 0 auto 30px;
   }
   .hero .phone-img {
-    width: 240px;
+    width: 280px;
   }
 
   .what-is-maraphone h2 {
@@ -466,7 +450,7 @@ body.en .features .feature .content .title {
   }
 
   .what-is-maraphone {
-    margin-top: -110px;
+    margin-top: -170px;
   }
 
   .features .feature {
