--- a/assets/scss/_what-is-maraphone.scss
+++ b/assets/scss/_what-is-maraphone.scss
@@ -3,8 +3,10 @@
   padding: 60px;
   background-color: #ffffff;
   box-shadow: 0px 14px 26px rgba(0, 0, 0, 0.08);
-  margin-top: -110px;
+  margin-top: -162px;
   border-radius: 20px;
+  position: relative;
+  z-index: 2;
   h2 {
     font-size: 36px;
     margin-bottom: 30px;
